# big_integer

./: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  main.cpp  my_vector.cpp  my_vector.h  mytestik.cpp
gtest/: gtest.h
lib/: compression.cpp  compression.h
test/: gen.py  output  output.out  test.cpp  test.out  test.out.out  test3.out
